
*** HYBRID CHANGELOG
*** Newest entries at top

version hybrid-6-b53   17-Mar-1999
* fixed misplaced #ifdef's and } causing undef'ed ANTI_SPAMBOT_EXTRA to fail
in s_serv.c s_user.c
-Dianora

version hybrid-6-b52   15-Mar-1999
* userlength oopsies with usernames
* added fix by comstud to s_misc.c remove_dependents() unnecessary WALLOPS
-comstud/orabidoo	
* fixed mtrie_conf.c bugs
* added ip to /trace (help with virtual host cloners)
-Dianora
	
version hybrid-6-b51   11-Mar-1999
* added WHOIS_WAIT to info output 
-Rodder
* was using idented username instead of ~ name for unidented clients
  caused weird bug. s_conf.c attach_Iline()
* clients with > I line were still being limited by client per IP limits.
* had BUFSIZ instead of BUFSIZE in strncpy() in s_serv.c broke m_unkline
* fixed "Bad Nick" problem. was harmless but stupid. users who used
  a nick beginning with '~' would trigger this one. Had Q line code in
  slightly wrong place. s_user.c m_nick()
* fixed truncation for username, affects k-lines both unidented, idented.
  s_user.c register_user()
* Added sendto_realops notification of spoofed IP's. should be SYSLOG
  or logged, for proper backtracking if necessary IMO
* fixed CLUSTER code, still needs thorough testing. s_serv.c send.c
-Dianora
	
version hybrid-6-b50   24-Feb-1999
* report_specials was showing aconf->host not aconf->user
* return ERR_TOOMANYTARGETS if privmsg is used with multiple targets	
-Dianora
	
version hybrid-6-b49   19-Feb-1999
* botch with POLL code fixed, forgot to test it on solaris after
  adding back fdlist code *sigh* 
-Dianora
	
version hybrid-6-b48   19-Feb-1999
* allow all opers to see stats c IP's
* added two more examples to Q lines, crush and cwush
* added fix from syrk (Christophe Kalt) in res.c
-Dianora

version hybrid-6-b47
* oops I don't know what happened to this one, but irc.colorado.edu
is running this one oops.

version hybrid-6-b46   15-Feb-1999
* put fdlist code back in. Ok, I goofed. mea culpa.